--- a/day01/pagina.html
+++ b/day01/pagina.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Hello</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
@@ -10,15 +11,26 @@
 
     <h2>Subtítulo</h2>
 
-    <p>
+    <p class="principal">
         <strong> Texto em negrito</strong> 
         <br />
         Mais texto do parágrafo.
     </p>
 
+    <p class="principal">
+        <strong> Texto em negrito</strong> 
+        <br />
+        Mais texto do parágrafo.
+    </p>
+    
     <a href="https://python.org"> Clique aqui para ir a outro local</a>
 
-    <img src="https://github.com/python.png" alt="Logo do Python">
+    <img id="logo_python" src="https://github.com/python.png" alt="Logo do Python">
+    <img id="logo_django" src="https://github.com/django.png" alt="Logo do Django">
+
+    <p  class="aviso">
+        AVISO !!! Importante
+    </p>
 
 </body>
 
